[tool.poetry]
name = "recipe-transfer"
version = "0.1.0"
description = ""
authors = ["kishimoto <drehbleistift@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.17.112"
pandas = "^1.3.0"
firebase-admin = "^5.0.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
